force-app/main/default/objects/Disciple_Course__c/Disciple_Course__c.object-meta.xml
<CustomObject>
    <label>BeADisciple.com Course</label>
    <nameField>
        <label>Disciple Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BeADisciple.com Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>