force-app/main/default/objects/Disciple_Course__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified Lay Ministry</fullName>
            </value>
            <value>
                <fullName>Congregational Leadership</fullName>
            </value>
            <value>
                <fullName>Disciple Bible Study</fullName>
            </value>
            <value>
                <fullName>IFD Certifications</fullName>
            </value>
            <value>
                <fullName>Lay Servant Ministries</fullName>
            </value>
            <value>
                <fullName>Upper Room</fullName>
            </value>
            <value>
                <fullName>Wesley Lay Academy</fullName>
            </value>
            <value>
                <fullName>UMCRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>