force-app/main/default/objects/Disciple_Course__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Care for Self and Others</fullName>
            </value>
            <value>
                <fullName>Certified Lay Ministry</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Ministry</fullName>
            </value>
            <value>
                <fullName>Christian Education</fullName>
            </value>
            <value>
                <fullName>Church Administration &amp; Leadership</fullName>
            </value>
            <value>
                <fullName>Evangelism</fullName>
            </value>
            <value>
                <fullName>Grief</fullName>
            </value>
            <value>
                <fullName>Music &amp; Worship Ministry</fullName>
            </value>
            <value>
                <fullName>Older Adult Ministry</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>Prayer &amp; Meditation</fullName>
            </value>
            <value>
                <fullName>Rural Ministry</fullName>
            </value>
            <value>
                <fullName>Seasonal (Lent/Advent)</fullName>
            </value>
            <value>
                <fullName>Spiritual Formation</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Theology</fullName>
            </value>
            <value>
                <fullName>Trainings</fullName>
            </value>
            <value>
                <fullName>United Methodism</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Ministry</fullName>
            </value>
            <value>
                <fullName>Youth Ministry</fullName>
            </value>
            <value>
                <fullName>Biblical Studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>