force-app/main/default/objects/Disciple_Course__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This class is part of a certification program</description>
    <inlineHelpText>This class is part of a certification program</inlineHelpText>
    <label>Program</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipName>Disciple_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>