force-app/main/default/objects/Disciple_Course__c/fields/Certification_Order__c.field-meta.xml
<CustomField>
    <fullName>Certification_Order__c</fullName>
    <label>Certification Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>