force-app/main/default/objects/Disciple_Course__c/fields/Course_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Course_Completion_Rate__c</fullName>
    <formula>Course_Completion_Rate_Total__c /  Number_of_Courses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Completion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>