force-app/main/default/objects/Disciple_Course__c/fields/Course_Completion_Rate_Total__c.field-meta.xml
<CustomField>
    <fullName>Course_Completion_Rate_Total__c</fullName>
    <label>Course Completion Rate (Total)</label>
    <summarizedField>Course_Session__c.Completion_Rate__c</summarizedField>
    <summaryFilterItems>
        <field>Course_Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Session__c.Disciple_Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>