force-app/main/default/objects/Disciple_Course__c/fields/Course_Max__c.field-meta.xml
<CustomField>
    <fullName>Course_Max__c</fullName>
    <label>Course Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>