force-app/main/default/objects/Disciple_Course__c/fields/Course_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_URL__c</fullName>
    <inlineHelpText>This is the website url for the course.</inlineHelpText>
    <label>Course URL</label>
    <type>Url</type>
</CustomField>