force-app/main/default/objects/Disciple_Course__c/fields/CourseSFID__c.field-meta.xml
<CustomField>
    <fullName>CourseSFID__c</fullName>
    <description>This + Course Start Date is used to match the correct course session.</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This ID should be set in the formstack enrollment form.</inlineHelpText>
    <label>CourseSFID</label>
    <type>Text</type>
</CustomField>