force-app/main/default/objects/Disciple_Course__c/fields/Dupe_Match__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dupe Match</label>
    <type>Checkbox</type>
</CustomField>