force-app/main/default/objects/Disciple_Course__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be become the primary contact in the resulting opportunity after each course session is completed.</description>
    <inlineHelpText>Please search for class instructor before creating a new contact record.</inlineHelpText>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Disciple_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>