force-app/main/default/objects/Disciple_Course__c/fields/Instructor_Portion__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Portion__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Instructor Portion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>