force-app/main/default/objects/Disciple_Course__c/fields/Last_Class_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Class_Date__c</fullName>
    <description>End Date of most recent completed class.</description>
    <inlineHelpText>End Date of most recent completed class.</inlineHelpText>
    <label>Last Class Date</label>
    <summarizedField>Course_Session__c.End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Course_Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Session__c.Disciple_Course__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>