force-app/main/default/objects/Disciple_Course__c/fields/Number_of_Courses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Courses__c</fullName>
    <label>Number of Completed Courses</label>
    <summaryFilterItems>
        <field>Course_Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Session__c.Disciple_Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>