force-app/main/default/objects/Disciple_Course__c/fields/Total_Completed_Classes__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Classes__c</fullName>
    <description>Count of all completed classes</description>
    <inlineHelpText>Count of all completed classes</inlineHelpText>
    <label>Total Completed Classes</label>
    <summaryFilterItems>
        <field>Course_Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Session__c.Disciple_Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>