force-app/main/default/objects/Disciple_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Number__c</columns>
    <columns>Last_Class_Date__c</columns>
    <columns>Next_Class_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>