force-app/main/default/objects/Disciple_Course__c/listViews/Course_Summary_Information.listView-meta.xml
<ListView>
    <fullName>Course_Summary_Information</fullName>
    <columns>NAME</columns>
    <columns>Last_Class_Date__c</columns>
    <columns>Next_Class_Date__c</columns>
    <columns>Total_Completed_Classes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Course Date Information</label>
</ListView>