force-app/main/default/objects/Disciple_Course__c/listViews/Courses_by_Course_Number.listView-meta.xml
<ListView>
    <fullName>Courses_by_Course_Number</fullName>
    <columns>NAME</columns>
    <columns>Course_Number__c</columns>
    <columns>Next_Class_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Affiliation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Courses by Course Number</label>
</ListView>