force-app/main/default/objects/Disciple_Course__c/listViews/Courses_missing_Course_Number.listView-meta.xml
<ListView>
    <fullName>Courses_missing_Course_Number</fullName>
    <columns>NAME</columns>
    <columns>Course_Number__c</columns>
    <columns>Last_Class_Date__c</columns>
    <columns>Next_Class_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>Courses missing Course Number</label>
</ListView>